# smog

./: .gitignore  README.md  config.yaml.example  pyproject.toml  secrets.yaml.example
.claude/: CLAUDE.md
.claude/agents/: README.md  docs-guardian.md  pr-reviewer.md  progress-guardian.md  refactor-scan.md  ts-enforcer.md
.claude/commands/: generate-pr-review.md  pr.md
src/smog/: __init__.py  cli.py  client.py  config.py  models.py
tests/: test_cli.py  test_client.py  test_config.py  test_models.py
